# casca-sh

./: .gitignore  CMakeLists.txt  README.md  [dap-terminal] LLDB: Launch  run.sh  teste.txt
.cache/clangd/index/: main.c.D7D6E599EEFB65CB.idx
include/: autocomplete.h  built_in.h  exec_programs.h  history.h  navigation.h  parsing.h  redirection.h  trie-dynamic.h
src/: autocomplete.c  built_in.c  exec_programs.c  history.c  main.c  parsing.c  redirection.c  trie-dynamic.c
